<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_main_page"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sync_now"
            android:icon="@drawable/ic_sync_now"
            android:title="@string/sync_now" />
        <item
            android:id="@+id/nav_sync_options"
            android:icon="@drawable/ic_sync_options"
            android:title="@string/sync_options" />
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_premium"
            android:title="@string/premium" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>