<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.silent_ver_1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.silent_ver_1.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_sync_now"
        android:name="com.example.silent_ver_1.ui.syncnow.SyncNowFragment"
        android:label="@string/sync_now"
        tools:layout="@layout/fragment_sync_now" />
    <fragment
        android:id="@+id/nav_sync_options"
        android:name="com.example.silent_ver_1.ui.syncoptions.SyncOptionsFragment"
        android:label="@string/sync_options"
        tools:layout="@layout/fragment_sync_options" />
    <fragment
        android:id="@+id/nav_premium"
        android:name="com.example.silent_ver_1.ui.premium.PremiumFragment"
        android:label="@string/premium"
        tools:layout="@layout/fragment_premium" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.silent_ver_1.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" >
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.silent_ver_1.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>